--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <meta name="keywords" content="" />
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+        <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
         <link href="/css/styles.css" rel="stylesheet">
 
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
-        <script src="/js/store+json2.min.js"></script>
-        <script src="/js/vue.min.js"></script>
+        <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="/bower_components/store-js/store+json2.min.js"></script>
+        <script src="/bower_components/vue/dist/vue.min.js"></script>
         <script src="/js/main.js"></script>
 
     </head>
